reports/pattern-matching.log
Traceback (most recent call last):
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/dev/anaconda3/envs/jb/lib/python3.8/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from collections import namedtuple

Point2D = namedtuple('Point2D', 'x y')
Point3D = namedtuple('Point3D', 'x y z')

def make_point_3d(pt):
    match pt:
        case (x, y):
            return Point3D(x, y, 0)
        case (x, y, z):
            return Point3D(x, y, z)
        case Point2D(x, y):
            return Point3D(x, y, 0)
        case Point3D(_, _, _):
            return pt
        case _:
            raise TypeError('a type cannot be converted to Point3D')
------------------

[0;36m  File [0;32m"<ipython-input-1-8700d67f3e0f>"[0;36m, line [0;32m7[0m
[0;31m    match pt:[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-8700d67f3e0f>, line 7)

